# XML-plugins-exhibit

./: .gitmodules  CMakeLists.txt  README.md  results_static.csv  test_runner.cpp  visualizer.py  xml_generator.cpp
benchmark/: instruction_rapidxml.md  pugixml_instruction.md  pugixml_test.cpp  rapidxml_test.cpp  tinyxml2_instruction.md  tinyxml2_test.cpp
